@@ -48,6 +48,7 @@ dist_tmpl_DATA = \
 	templates/report-monthly.html \
 	templates/report-serviceid.html \
 	templates/report-yearly.html \
+	templates/search.html \
 	templates/html-incblocks.txt \
 	templates/tset-list.html \
 	templates/email-alarm.txt
