@@ -1,0 +1,40 @@
+[% PROCESS 'html-incblocks.txt' %]
+[% INCLUDE htmlstart
+     title='Search results: ' _ variables.SEARCH
+     contentClass="SingleColumnContent"
+     noTopMenu=1 %]
+
+<H1>Search results: [% variables.SEARCH %]</H1>
+[% INCLUDE treename %]
+<DIV CLASS="Listing">
+[% results = searchResults();
+
+   FOREACH entry = results;
+
+    counter = counter + 1;
+    IF counter % 2 == 0;
+      evenRow = 1;
+    ELSE;
+      evenRow = 0;
+    END;
+
+    etoken = pathToken(entry.0);
+%]
+  <DIV CLASS="[% evenRow ? 'ListRowEven' : 'ListRow' %]">
+    <SPAN CLASS="NodeName"><A HREF="[%url(etoken)%]">
+    [% entry.0 %]</A></SPAN>
+    <SPAN CLASS="NodeDescr">
+    [% IF entry.1; entry.1 _ ': ' _ nodeParam(etoken, entry.1); END %]</SPAN>
+  </DIV>
+[% END %]
+</DIV>
+
+
+</DIV><!-- Content -->[% global.contentFinished = 1 %]
+<DIV CLASS="BottomMenu">
+[% INCLUDE shortcut url=url(pathToken('/')) text="Datasources tree"
+                    title="Back to the datasources tree" %]
+[% INCLUDE searchdialog %]
+</DIV>
+
+[% INCLUDE htmlend %]
